Make 'single' prediction by default

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
         <tr>
             <td>예측 타입:</td>
             <td><select id="prediction_type">
-                <option value="multisite" selected="selected">Multi-site</option>
-                <option value="single">Single</option>
+                <option value="single" selected="selected">Single</option>
+                <option value="multisite" >Multi-site</option>
                 <option value="1_hour">Hourly</option>
                 <option value="3_hour">3-Hourly</option>
                 <option value="6_hour">6-Hourly</option>
